--- a/poll.html
+++ b/poll.html
@@ -3,45 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LMS | Quiz</title>
+  <title>LMS | Problem Poll Hub</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="dashboard-header">
-    <div class="logo">LMS SaaS</div>
-    <input type="text" placeholder="Search quizzes..." class="search-bar">
-    <div class="profile-dropdown">
-      <span id="profileName">John Doe 👤</span>
-      <div class="dropdown-menu">
-        <a href="profile.html">Profile</a>
-        <a href="#">Settings</a>
-        <a href="index.html">Logout</a>
-      </div>
+<header class="dashboard-header">
+  <div class="logo">LMS SaaS</div>
+  <input type="text" placeholder="Search problems..." class="search-bar">
+  <div class="profile-dropdown">
+    <span id="profileName">John Doe 👤</span>
+    <div class="dropdown-menu">
+      <a href="profile.html">Profile</a>
+      <a href="#">Settings</a>
+      <a href="index.html">Logout</a>
     </div>
-  </header>
-
-  <div class="dashboard-container">
-    <aside class="sidebar">
-      <nav>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="courses.html">My Courses</a>
-        <a href="lesson.html">Lessons</a>
-        <a href="entertainment.html">Entertainment Hub</a>
-        <a href="class.html">Join Class</a>
-        <a href="#" class="active">Quizzes</a>
-        <a href="profile.html">Profile</a>
-        <a href="#">Settings</a>
-      </nav>
-    </aside>
-
-    <main class="main-content">
-      <h2>Quiz / Poll 📝</h2>
-      <form id="quizForm"></form>
-      <button class="btn" id="submitQuiz">Submit Quiz</button>
-      <p id="quizResult"></p>
-    </main>
   </div>
+</header>
 
-  <script src="poll.js"></script>
+<div class="dashboard-container">
+  <aside class="sidebar">
+    <nav>
+      <a href="dashboard.html">Dashboard</a>
+      <a href="courses.html">My Courses</a>
+      <a href="lesson.html">Lessons</a>
+      <a href="entertainment.html">Entertainment Hub</a>
+      <a href="class.html">Join Class</a>
+      <a href="#" class="active">Problem Poll</a>
+      <a href="profile.html">Profile</a>
+      <a href="#">Settings</a>
+    </nav>
+  </aside>
+
+  <main class="main-content">
+    <h2>Problem Poll Hub 📝</h2>
+    <p>Share your learning challenges. Upvote issues to help us prioritize solutions. 🌟</p>
+
+    <form id="problemForm">
+      <input type="text" id="problemTitle" placeholder="Problem title" required aria-label="Problem title">
+      <textarea id="problemDescription" placeholder="Describe your problem..." required aria-label="Problem description"></textarea>
+      <label>
+        <input type="checkbox" id="anonymousToggle" checked> Submit anonymously
+      </label>
+      <p class="privacy-note">
+        Your responses are anonymous and used only to improve learning. No personal data will be shared.
+      </p>
+      <button class="btn" type="submit">Submit Problem</button>
+    </form>
+
+    <h3>Popular Problems</h3>
+    <div id="problemList"></div>
+  </main>
+</div>
+
+<script src="poll.js"></script>
 </body>
 </html>
