--- a/index.html
+++ b/index.html
@@ -4,7 +4,130 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LMS | Login</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .auth-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+    }
+
+    .auth-box {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      padding: 30px;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      color: #6b7280;
+      margin-bottom: 20px;
+    }
+
+    .auth-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    input {
+      padding: 10px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #6366f1;
+      box-shadow: 0 0 0 2px #c7d2fe;
+    }
+
+    .password-wrapper {
+      position: relative;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 12px;
+      top: 10px;
+      cursor: pointer;
+    }
+
+    .btn {
+      background: #6366f1;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #4f46e5;
+    }
+
+    .btn-outline {
+      border: 1px solid #d1d5db;
+      padding: 10px;
+      border-radius: 8px;
+      background: white;
+      cursor: pointer;
+    }
+
+    .btn-outline:hover {
+      background: #f3f4f6;
+    }
+
+    .divider {
+      display: flex;
+      align-items: center;
+      margin: 20px 0;
+      color: #9ca3af;
+    }
+
+    .divider span {
+      padding: 0 10px;
+      background: #fff;
+    }
+
+    .divider::before, .divider::after {
+      content: "";
+      flex: 1;
+      height: 1px;
+      background: #e5e7eb;
+    }
+
+    .redirect {
+      margin-top: 20px;
+      color: #6b7280;
+    }
+
+    .redirect a {
+      color: #6366f1;
+      text-decoration: none;
+    }
+
+    .redirect a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <div class="auth-container">
@@ -34,6 +157,42 @@
       <p class="redirect">Don’t have an account? <a href="signup.html">Sign up</a></p>
     </div>
   </div>
-  <script src="script.js"></script>
+
+  <script>
+    // Toggle password visibility
+    document.querySelectorAll(".toggle-password").forEach(icon => {
+      icon.addEventListener("click", () => {
+        const input = icon.previousElementSibling;
+        if (input.type === "password") {
+          input.type = "text";
+          icon.textContent = "🙈";
+        } else {
+          input.type = "password";
+          icon.textContent = "👁️";
+        }
+      });
+    });
+
+    // Dummy login handlers (replace with Clerk SDK later)
+    function loginWithGoogle() {
+      alert("Login with Google (Clerk integration placeholder)");
+    }
+
+    function loginWithOtp() {
+      alert("Login with Email OTP (Clerk integration placeholder)");
+    }
+
+    // Form submit
+    document.getElementById("loginForm").addEventListener("submit", e => {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
+
+      // TODO: Replace with Clerk auth
+      console.log("Email:", email, "Password:", password);
+      alert("Login successful! Redirecting to dashboard...");
+      window.location.href = "dashboard.html";
+    });
+  </script>
 </body>
 </html>
