--- a/index.html
+++ b/index.html
@@ -115,6 +115,123 @@
     }
 
     .redirect {
+      margin-top: 20px;<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LMS | Login</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .auth-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+    }
+
+    .auth-box {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      padding: 30px;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      color: #6b7280;
+      margin-bottom: 20px;
+    }
+
+    .auth-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    input {
+      padding: 10px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #6366f1;
+      box-shadow: 0 0 0 2px #c7d2fe;
+    }
+
+    .password-wrapper {
+      position: relative;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 12px;
+      top: 10px;
+      cursor: pointer;
+    }
+
+    .btn {
+      background: #6366f1;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #4f46e5;
+    }
+
+    .btn-outline {
+      border: 1px solid #d1d5db;
+      padding: 10px;
+      border-radius: 8px;
+      background: white;
+      cursor: pointer;
+    }
+
+    .btn-outline:hover {
+      background: #f3f4f6;
+    }
+
+    .divider {
+      display: flex;
+      align-items: center;
+      margin: 20px 0;
+      color: #9ca3af;
+    }
+
+    .divider span {
+      padding: 0 10px;
+      background: #fff;
+    }
+
+    .divider::before, .divider::after {
+      content: "";
+      flex: 1;
+      height: 1px;
+      background: #e5e7eb;
+    }
+
+    .redirect {
       margin-top: 20px;
       color: #6b7280;
     }
@@ -126,6 +243,29 @@
 
     .redirect a:hover {
       text-decoration: underline;
+    }
+
+    /* Dashboard link buttons after login */
+    .links-container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 25px;
+      text-align: left;
+    }
+
+    .links-container a {
+      display: block;
+      padding: 10px 15px;
+      background: #e0e7ff;
+      border-radius: 8px;
+      color: #1e3a8a;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .links-container a:hover {
+      background: #c7d2fe;
     }
   </style>
 </head>
@@ -155,6 +295,20 @@
       </div>
 
       <p class="redirect">Don’t have an account? <a href="signup.html">Sign up</a></p>
+
+      <!-- Links to real pages -->
+      <div class="links-container">
+        <strong>Available Pages:</strong>
+        <a href="dashboard.html" target="_blank">Dashboard</a>
+        <a href="courses.html" target="_blank">Courses</a>
+        <a href="lesson.html" target="_blank">Lesson</a>
+        <a href="class.html" target="_blank">Class</a>
+        <a href="poll.html" target="_blank">Problem Poll</a>
+        <a href="blog.html" target="_blank">Blog Hub</a>
+        <a href="quiz-assignment.html" target="_blank">Quiz & Assignment</a>
+        <a href="certificate.html" target="_blank">Certificates</a>
+        <a href="settings.html" target="_blank">Settings</a>
+      </div>
     </div>
   </div>
 
@@ -173,26 +327,136 @@
       });
     });
 
-    // Dummy login handlers (replace with Clerk SDK later)
+    // Dummy login handlers
     function loginWithGoogle() {
-      alert("Login with Google (Clerk integration placeholder)");
+      alert("Login with Google (placeholder)");
     }
-
     function loginWithOtp() {
-      alert("Login with Email OTP (Clerk integration placeholder)");
+      alert("Login with Email OTP (placeholder)");
     }
 
     // Form submit
     document.getElementById("loginForm").addEventListener("submit", e => {
       e.preventDefault();
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-
-      // TODO: Replace with Clerk auth
-      console.log("Email:", email, "Password:", password);
       alert("Login successful! Redirecting to dashboard...");
       window.location.href = "dashboard.html";
     });
   </script>
 </body>
-</html>
+</html>￼Enter<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LMS | Login</title>
+le>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .auth-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+    }
+
+    .auth-box {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      padding: 30px;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      color: #6b7280;
+      margin-bottom: 20px;
+    }
+
+    .auth-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    input {
+      padding: 10px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #6366f1;
+      box-shadow: 0 0 0 2px #c7d2fe;
+    }
+
+    .password-wrapper {
+      position: relative;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 12px;
+      top: 10px;
+      cursor: pointer;
+    }
+
+    .btn {
+      background: #6366f1;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #4f46e5;
+    }
+
+    .btn-outline {
+      border: 1px solid #d1d5db;
+      padding: 10px;
+      border-radius: 8px;
+      background: white;
+      cursor: pointer;
+    }
+
+    .btn-outline:hover {
+      background: #f3f4f6;
+    }
+
+    .divider {
+      display: flex;
+      align-items: center;
+      margin: 20px 0;
+      color: #9ca3af;
+    }
+
+    .divider span {
+      padding: 0 10px;
+      background: #fff;
+    }
+
+    .divider::before, .divider::after {
+      content: "";
+      flex: 1;
+      height: 1px;
+      background: #e5e7eb;
+    }
+
+    .redirect {
