--- a/index.html
+++ b/index.html
@@ -1,346 +1,198 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LMS | Login</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9fafb;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    .auth-container {
-      width: 100%;
-      max-width: 400px;
-      padding: 20px;
-    }
-
-    .auth-box {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      padding: 30px;
-      text-align: center;
-    }
-
-    h2 {
-      margin-bottom: 8px;
-    }
-
-    .subtitle {
-      color: #6b7280;
-      margin-bottom: 20px;
-    }
-
-    .auth-form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    input {
-      padding: 10px;
-      border: 1px solid #d1d5db;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #6366f1;
-      box-shadow: 0 0 0 2px #c7d2fe;
-    }
-
-    .password-wrapper {
-      position: relative;
-    }
-
-    .toggle-password {
-      position: absolute;
-      right: 12px;
-      top: 10px;
-      cursor: pointer;
-    }
-
-    .btn {
-      background: #6366f1;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background: #4f46e5;
-    }
-
-    .btn-outline {
-      border: 1px solid #d1d5db;
-      padding: 10px;
-      border-radius: 8px;
-      background: white;
-      cursor: pointer;
-    }
-
-    .btn-outline:hover {
-      background: #f3f4f6;
-    }
-
-    .divider {
-      display: flex;
-      align-items: center;
-      margin: 20px 0;
-      color: #9ca3af;
-    }
-
-    .divider span {
-      padding: 0 10px;
-      background: #fff;
-    }
-
-    .divider::before, .divider::after {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #e5e7eb;
-    }
-
-    .redirect {
-      margin-top: 20px;<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LMS | Login</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9fafb;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    .auth-container {
-      width: 100%;
-      max-width: 400px;
-      padding: 20px;
-    }
-
-    .auth-box {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      padding: 30px;
-      text-align: center;
-    }
-
-    h2 {
-      margin-bottom: 8px;
-    }
-
-    .subtitle {
-      color: #6b7280;
-      margin-bottom: 20px;
-    }
-
-    .auth-form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    input {
-      padding: 10px;
-      border: 1px solid #d1d5db;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #6366f1;
-      box-shadow: 0 0 0 2px #c7d2fe;
-    }
-
-    .password-wrapper {
-      position: relative;
-    }
-
-    .toggle-password {
-      position: absolute;
-      right: 12px;
-      top: 10px;
-      cursor: pointer;
-    }
-
-    .btn {
-      background: #6366f1;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background: #4f46e5;
-    }
-
-    .btn-outline {
-      border: 1px solid #d1d5db;
-      padding: 10px;
-      border-radius: 8px;
-      background: white;
-      cursor: pointer;
-    }
-
-    .btn-outline:hover {
-      background: #f3f4f6;
-    }
-
-    .divider {
-      display: flex;
-      align-items: center;
-      margin: 20px 0;
-      color: #9ca3af;
-    }
-
-    .divider span {
-      padding: 0 10px;
-      background: #fff;
-    }
-
-    .divider::before, .divider::after {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #e5e7eb;
-    }
-
-    .redirect {
-      margin-top: 20px;
-      color: #6b7280;
-    }
-
-    .redirect a {
-      color: #6366f1;
-      text-decoration: none;
-    }
-
-    .redirect a:hover {
-      text-decoration: underline;
-    }
-
-    /* Dashboard link buttons after login */
-    .links-container {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 25px;
-      text-align: left;
-    }
-
-    .links-container a {
-      display: block;
-      padding: 10px 15px;
-      background: #e0e7ff;
-      border-radius: 8px;
-      color: #1e3a8a;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-
-    .links-container a:hover {
-      background: #c7d2fe;
-    }
-  </style>
-</head>
-<body>
-  <div class="auth-container">
-    <div class="auth-box">
-      <h2>Welcome back 👋</h2>
-      <p class="subtitle">Login to continue your learning journey</p>
-
-      <form id="loginForm" class="auth-form">
-        <input type="email" id="loginEmail" placeholder="Email" required>
-        
-        <div class="password-wrapper">
-          <input type="password" id="loginPassword" placeholder="Password" required>
-          <span class="toggle-password">👁️</span>
-        </div>
-
-        <a href="#" class="forgot-link">Forgot password?</a>
-        <button type="submit" class="btn">Login</button>
-      </form>
-
-      <div class="divider"><span>or</span></div>
-
-      <div class="social-logins">
-        <button class="btn-outline" onclick="loginWithGoogle()">Continue with Google</button>
-        <button class="btn-outline" onclick="loginWithOtp()">Continue with Email OTP</button>
-      </div>
-
-      <p class="redirect">Don’t have an account? <a href="signup.html">Sign up</a></p>
-
-      <!-- Links to real pages -->
-      <div class="links-container">
-        <strong>Available Pages:</strong>
-        <a href="dashboard.html" target="_blank">Dashboard</a>
-        <a href="courses.html" target="_blank">Courses</a>
-        <a href="lesson.html" target="_blank">Lesson</a>
-        <a href="class.html" target="_blank">Class</a>
-        <a href="poll.html" target="_blank">Problem Poll</a>
-        <a href="blog.html" target="_blank">Blog Hub</a>
-        <a href="quiz-assignment.html" target="_blank">Quiz & Assignment</a>
-        <a href="certificate.html" target="_blank">Certificates</a>
-        <a href="settings.html" target="_blank">Settings</a>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // Toggle password visibility
-    document.querySelectorAll(".toggle-password").forEach(icon => {
-      icon.addEventListener("click", () => {
-        const input = icon.previousElementSibling;
-        if (input.type === "password") {
-          input.type = "text";
-          icon.textContent = "🙈";
-        } else {
-          input.type = "password";
-          icon.textContent = "👁️";
-        }
-      });
-    });
-
-    // Dummy login handlers
-    function loginWithGoogle() {
-      alert("Login with Google (placeholder)");
-    }
-    function loginWithOtp() {
-      alert("Login with Email OTP (placeholder)");
-    }
-
-    // Form submit
-    document.getElementById("loginForm").addEventListener("submit", e => {
-      e.preventDefault();
-      alert("Login successful! Redirecting to dashboard...");
-      window.location.href = "dashboard.html";
-    });
-  </script>
-</body>
-</html>
+‎<!DOCTYPE html>
+‎<html lang="en">
+‎<head>
+‎  <meta charset="UTF-8">
+‎  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+‎  <title>LMS | Login</title>
+‎  <style>
+‎    body {
+‎      font-family: Arial, sans-serif;
+‎      background: #f9fafb;
+‎      margin: 0;
+‎      display: flex;
+‎      justify-content: center;
+‎      align-items: center;
+‎      min-height: 100vh;
+‎    }
+‎
+‎    .auth-container {
+‎      width: 100%;
+‎      max-width: 400px;
+‎      padding: 20px;
+‎    }
+‎
+‎    .auth-box {
+‎      background: #fff;
+‎      border-radius: 12px;
+‎      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+‎      padding: 30px;
+‎      text-align: center;
+‎    }
+‎
+‎    h2 {
+‎      margin-bottom: 8px;
+‎    }
+‎
+‎    .subtitle {
+‎      color: #6b7280;
+‎      margin-bottom: 20px;
+‎    }
+‎
+‎    .auth-form {
+‎      display: flex;
+‎      flex-direction: column;
+‎      gap: 15px;
+‎    }
+‎
+‎    input {
+‎      padding: 10px;
+‎      border: 1px solid #d1d5db;
+‎      border-radius: 8px;
+‎      font-size: 1rem;
+‎    }
+‎
+‎    input:focus {
+‎      outline: none;
+‎      border-color: #6366f1;
+‎      box-shadow: 0 0 0 2px #c7d2fe;
+‎    }
+‎
+‎    .password-wrapper {
+‎      position: relative;
+‎    }
+‎
+‎    .toggle-password {
+‎      position: absolute;
+‎      right: 12px;
+‎      top: 10px;
+‎      cursor: pointer;
+‎    }
+‎
+‎    .btn {
+‎      background: #6366f1;
+‎      color: white;
+‎      padding: 12px;
+‎      border: none;
+‎      border-radius: 8px;
+‎      font-weight: bold;
+‎      cursor: pointer;
+‎      transition: background 0.3s;
+‎    }
+‎
+‎    .btn:hover {
+‎      background: #4f46e5;
+‎    }
+‎
+‎    .btn-outline {
+‎      border: 1px solid #d1d5db;
+‎      padding: 10px;
+‎      border-radius: 8px;
+‎      background: white;
+‎      cursor: pointer;
+‎    }
+‎
+‎    .btn-outline:hover {
+‎      background: #f3f4f6;
+‎    }
+‎
+‎    .divider {
+‎      display: flex;
+‎      align-items: center;
+‎      margin: 20px 0;
+‎      color: #9ca3af;
+‎    }
+‎
+‎    .divider span {
+‎      padding: 0 10px;
+‎      background: #fff;
+‎    }
+‎
+‎    .divider::before, .divider::after {
+‎      content: "";
+‎      flex: 1;
+‎      height: 1px;
+‎      background: #e5e7eb;
+‎    }
+‎
+‎    .redirect {
+‎      margin-top: 20px;
+‎      color: #6b7280;
+‎    }
+‎
+‎    .redirect a {
+‎      color: #6366f1;
+‎      text-decoration: none;
+‎    }
+‎
+‎    .redirect a:hover {
+‎      text-decoration: underline;
+‎    }
+‎  </style>
+‎</head>
+‎<body>
+‎  <div class="auth-container">
+‎    <div class="auth-box">
+‎      <h2>Welcome back 👋</h2>
+‎      <p class="subtitle">Login to continue your learning journey</p>
+‎
+‎      <form id="loginForm" class="auth-form">
+‎        <input type="email" id="loginEmail" placeholder="Email" required>
+‎        
+‎        <div class="password-wrapper">
+‎          <input type="password" id="loginPassword" placeholder="Password" required>
+‎          <span class="toggle-password">👁️</span>
+‎        </div>
+‎
+‎        <a href="#" class="forgot-link">Forgot password?</a>
+‎        <button type="submit" class="btn">Login</button>
+‎      </form>
+‎
+‎      <div class="divider"><span>or</span></div>
+‎
+‎      <div class="social-logins">
+‎        <button class="btn-outline" onclick="loginWithGoogle()">Continue with Google</button>
+‎        <button class="btn-outline" onclick="loginWithOtp()">Continue with Email OTP</button>
+‎      </div>
+‎
+‎      <p class="redirect">Don’t have an account? <a href="signup.html">Sign up</a></p>
+‎    </div>
+‎  </div>
+‎
+‎  <script>
+‎    // Toggle password visibility
+‎    document.querySelectorAll(".toggle-password").forEach(icon => {
+‎      icon.addEventListener("click", () => {
+‎        const input = icon.previousElementSibling;
+‎        if (input.type === "password") {
+‎          input.type = "text";
+‎          icon.textContent = "🙈";
+‎        } else {
+‎          input.type = "password";
+‎          icon.textContent = "👁️";
+‎        }
+‎      });
+‎    });
+‎
+‎    // Dummy login handlers (replace with Clerk SDK later)
+‎    function loginWithGoogle() {
+‎      alert("Login with Google (Clerk integration placeholder)");
+‎    }
+‎
+‎    function loginWithOtp() {
+‎      alert("Login with Email OTP (Clerk integration placeholder)");
+‎    }
+‎
+‎    // Form submit
+‎    document.getElementById("loginForm").addEventListener("submit", e => {
+‎      e.preventDefault();
+‎      const email = document.getElementById("loginEmail").value;
+‎      const password = document.getElementById("loginPassword").value;
+‎
+‎      // TODO: Replace with Clerk auth
+‎      console.log("Email:", email, "Password:", password);
+‎      alert("Login successful! Redirecting to dashboard...");
+‎      window.location.href = "dashboard.html";
+‎    });
+‎  </script>
+‎</body>
+‎</html>
