--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
       <span id="profileName">John Doe 👤</span>
       <div class="dropdown-menu">
         <a href="profile.html">Profile</a>
-        <a href="#">Settings</a>
+        <a href="settings.html">Settings</a>
         <a href="index.html">Logout</a>
       </div>
     </div>
@@ -23,13 +23,16 @@
   <div class="dashboard-container">
     <aside class="sidebar">
       <nav>
-        <a href="#" class="active">Dashboard</a>
-        <a href="#">My Courses</a>
-        <a href="#">Join Class</a>
-        <a href="#">Entertainment Hub</a>
-        <a href="#">Certificates</a>
+        <a href="dashboard.html" class="active">Dashboard</a>
+        <a href="courses.html">My Courses</a>
+        <a href="lesson.html">Lesson</a>
+        <a href="class.html">Join Class</a>
+        <a href="poll.html">Poll</a>
+        <a href="blog.html">Blog</a>
+        <a href="quiz-assignment.html">Quiz / Assignment</a>
+        <a href="certificate.html">Certificates</a>
+        <a href="settings.html">Settings</a>
         <a href="profile.html">Profile</a>
-        <a href="#">Settings</a>
       </nav>
     </aside>
 
@@ -63,16 +66,12 @@
 
   <script>
     function joinClass() {
-      alert("Redirecting to class…");
-      // Replace with actual link or embed
+      window.location.href = "class.html"; // Redirect to the class page
     }
 
     function viewCertificates() {
-      alert("Redirecting to certificates…");
+      window.location.href = "certificate.html"; // Redirect to certificates page
     }
-
-    // Sidebar toggle for mobile (optional)
-    // Add JS here later if needed
   </script>
 </body>
-</html>
+            </html>
